--- a/client_config.json
+++ b/client_config.json
@@ -1,4 +1,5 @@
 {
-  "WWW_DIR": "C:/users/louis/www",
-  "LISTEN_PORT": 1234
+  "HOST": "home.ltcomputing.co.uk",
+  "UPLOAD_PORT": 31416,
+  "HTTP_PORT": 31417
 }
